fixup! Fix vertical spacing inconsistencies

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,7 +27,7 @@ $radius: 0.5rem;
 @import 'custom';
 
 body {
-  padding: 1rem 0;
+  padding: 1.5rem 0;
   font-family: -apple-system, BlinkMacSystemFont,
               "Segoe UI", Roboto, Helvetica, Arial,
               sans-serif, "Apple Color Emoji",
