--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -171,5 +171,5 @@ button {
 
 // Adjust vertical spacing of first title after selected tags
 .selected-tags + h2 {
-  margin-top: 0.75rem;
+  // margin-top: 0.75rem;
 }
